# rust-riscv-soc

./: .gitignore  Cargo.toml  MANUAL.md  Makefile  README.md  d  data0.hex
.cargo/: config.toml
.github/workflows/: ci.yml
docs/diagrams/: Rust-on-MCU-Quickguide.puml  Rust-on-MCU-manual.puml
hw/constraints/: basys3.xdc
hw/scripts/: build.tcl  flash.tcl
hw/src/: top.v
sw 2/: memory.ld
sw 2/.cargo/: config.toml
sw 2/program/: linker.ld
sw 2/src/: main.rs
sw/loader/: upload.py
sw/mcu-hal/: Cargo.toml
sw/mcu-hal/src/: adc.rs  buttons.rs  delay.rs  i2c.rs  leds.rs  legacy.rs  lib.rs  mmio.rs  pmod.rs  pwm.rs  rgb.rs  uart.rs
sw/mcu-rt/: Cargo.toml
sw/mcu-rt/src/: lib.rs
sw/program/: Cargo.toml  linker.ld
sw/program/.cargo/: config.toml
sw/program/src/: app.rs  hal.rs  main.rs  rt.rs
sw/src/: main.rs
sw/uploader/: Cargo.toml
sw/uploader/src/: main.rs
wildcat/: Makefile  a.out  data0.hex  data1.hex  data2.hex  data3.hex
wildcat/src/main/scala/rvsoc/: AdcController.scala  ButtonDebouncer.scala  I2cController.scala  PwmController.scala  RustSoCTop.scala
wildcat/src/main/scala/wildcat/: Util.scala
wildcat/src/main/scala/wildcat/pipeline/: Csr.scala
wildcat/src/test/scala/Bootloader/: BootloaderProtocolTest.scala
wildcat/src/test/scala/rvsoc/: ButtonDebouncerTest.scala
wildcat/src/test/scala/wildcat/: SimulatorTest.scala  SingleCycleTest.scala  WildcatTest.scala  WildcatTestUart.scala
xtask/: Cargo.toml
xtask/src/: main.rs
