[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.release]
opt-level = "s"       # Optimize for size (scratchpad is only 4 KB)
lto = true            # Link-time optimization — smaller binary
panic = "abort"       # No unwinding on panic (saves space, no_std anyway)
